--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,18 @@
         android:theme="@style/Theme.ProyectoFinalModulo"
         tools:targetApi="34">
         <activity
+            android:name=".AccionesUsuario.ListadoUsuario"
+            android:exported="false" />
+        <activity
+            android:name=".AdapterAnimales.ListadoUsuarios"
+            android:exported="false" />
+        <activity
+            android:name=".AccionesUsuario.ActualizarUsuario"
+            android:exported="false" />
+        <activity
+            android:name=".AccionesUsuario.EliminarUsuario"
+            android:exported="false" />
+        <activity
             android:name=".AccionesAnimales.ActualizarAnimales"
             android:exported="false" />
         <activity
